# Process this file with autoconf to produce a configure script.

AC_INIT
LDISKFS_AC_META
AC_LANG(C)
AC_CONFIG_AUX_DIR([.]) dnl # Don't look for install-sh, etc. in ..
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE([$LDISKFS_META_NAME], [$LDISKFS_META_VERSION])
AC_PROG_CC

LDISKFS_AC_DIST
LDISKFS_AC_KERNEL
LDISKFS_AC_CONFIG_HEADERS
LDISKFS_AC_LDISKFSDIR
LDISKFS_AC_QUILT
LDISKFS_AC_PATH_PROGS
LDISKFS_AC_DEFINE_OPTIONS
LDISKFS_AC_ENABLE_EXT4
LDISKFS_AC_DIST_LDISKFS_SERIES
LDISKFS_AC_CHECK_SYMBOL_EXPORTS
LDISKFS_AC_MOSTLYCLEANFILES
LDISKFS_AC_RPM

AC_CONFIG_FILES([
	Makefile
	ldiskfs/Makefile
])

AC_OUTPUT
